[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/Mincecraft.tres" type="DynamicFont" id=1]
[ext_resource path="res://GUI.gd" type="Script" id=2]

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 40.0
margin_right = -60.0
margin_bottom = -40.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 904.0
margin_bottom = 520.0

[node name="TopUi" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 904.0
margin_bottom = 22.0
alignment = 1

[node name="OxygenMeter" type="HBoxContainer" parent="VBoxContainer/TopUi"]
margin_right = 204.0
margin_bottom = 22.0
rect_min_size = Vector2( 120, 0 )
alignment = 1

[node name="OxyLevel" type="Label" parent="VBoxContainer/TopUi/OxygenMeter"]
margin_right = 130.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 1 )
text = "Oxygen Level"
align = 1
valign = 1

[node name="Oxynum" type="Label" parent="VBoxContainer/TopUi/OxygenMeter"]
margin_left = 134.0
margin_right = 204.0
margin_bottom = 22.0
rect_min_size = Vector2( 70, 0 )
custom_fonts/font = ExtResource( 1 )
text = "(100)"
valign = 1

[node name="Control" type="MarginContainer" parent="VBoxContainer/TopUi"]
margin_left = 208.0
margin_right = 816.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/TopUi/Control"]
margin_right = 120.0
margin_bottom = 20.0
rect_min_size = Vector2( 120, 20 )
size_flags_horizontal = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
value = 100.0
percent_visible = false

[node name="DepthMeter" type="HBoxContainer" parent="VBoxContainer/TopUi"]
margin_left = 820.0
margin_right = 904.0
margin_bottom = 22.0

[node name="DepthLevel" type="Label" parent="VBoxContainer/TopUi/DepthMeter"]
margin_right = 56.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 1 )
text = "Depth"
align = 1
valign = 1

[node name="Depthnum" type="Label" parent="VBoxContainer/TopUi/DepthMeter"]
margin_left = 60.0
margin_right = 84.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 1 )
text = "0m"
valign = 1

[node name="m" type="Label" parent="VBoxContainer/TopUi/DepthMeter"]
visible = false
margin_left = 88.0
margin_right = 100.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 1 )
text = "m"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 904.0
margin_bottom = 26.0

[node name="Objectives" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 904.0
margin_bottom = 296.0

[node name="Label1" type="Label" parent="VBoxContainer/Objectives"]
margin_right = 904.0
margin_bottom = 14.0
text = "Fix Pipe"

[node name="Label2" type="Label" parent="VBoxContainer/Objectives"]
margin_top = 18.0
margin_right = 904.0
margin_bottom = 32.0
text = "Find Treasure"

[node name="Label3" type="Label" parent="VBoxContainer/Objectives"]
margin_top = 36.0
margin_right = 904.0
margin_bottom = 50.0
text = "Report to surface"

[node name="Label4" type="Label" parent="VBoxContainer/Objectives"]
margin_top = 54.0
margin_right = 904.0
margin_bottom = 68.0
text = "Fix Pipe"

[node name="Label5" type="Label" parent="VBoxContainer/Objectives"]
margin_top = 72.0
margin_right = 904.0
margin_bottom = 86.0
text = "Find Treasure"

[node name="Label6" type="Label" parent="VBoxContainer/Objectives"]
margin_top = 90.0
margin_right = 904.0
margin_bottom = 104.0
text = "Report to surface"

[node name="Label7" type="Label" parent="VBoxContainer/Objectives"]
margin_top = 108.0
margin_right = 904.0
margin_bottom = 122.0
text = "Fix Pipe"

[node name="Label8" type="Label" parent="VBoxContainer/Objectives"]
margin_top = 126.0
margin_right = 904.0
margin_bottom = 140.0
text = "Find Treasure"

[node name="Label9" type="Label" parent="VBoxContainer/Objectives"]
margin_top = 144.0
margin_right = 904.0
margin_bottom = 158.0
text = "Report to surface"

[node name="Label10" type="Label" parent="VBoxContainer/Objectives"]
margin_top = 162.0
margin_right = 904.0
margin_bottom = 176.0
text = "Fix Pipe"

[node name="Label11" type="Label" parent="VBoxContainer/Objectives"]
margin_top = 180.0
margin_right = 904.0
margin_bottom = 194.0
text = "Find Treasure"

[node name="Label12" type="Label" parent="VBoxContainer/Objectives"]
margin_top = 198.0
margin_right = 904.0
margin_bottom = 212.0
text = "Report to surface"

[node name="Label13" type="Label" parent="VBoxContainer/Objectives"]
margin_top = 216.0
margin_right = 904.0
margin_bottom = 230.0
text = "Fix Pipe"

[node name="Label14" type="Label" parent="VBoxContainer/Objectives"]
margin_top = 234.0
margin_right = 904.0
margin_bottom = 248.0
text = "Find Treasure"

[node name="Label15" type="Label" parent="VBoxContainer/Objectives"]
margin_top = 252.0
margin_right = 904.0
margin_bottom = 266.0
text = "Report to surface"
